--- a/test/fixtures/bridge_statuses.yml
+++ b/test/fixtures/bridge_statuses.yml
@@ -1,13 +1,7 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  closed: 2017-01-10 07:27:59
-  open: 2017-01-10 07:27:59
-  closing: 2017-01-10 07:27:59
-  opening: 2017-01-10 07:27:59
-
-two:
-  closed: 2017-01-10 07:27:59
-  open: 2017-01-10 07:27:59
-  closing: 2017-01-10 07:27:59
-  opening: 2017-01-10 07:27:59
+open_long:
+  open: <%= Time.now - 1.minute %>
+  opening: <%= Time.now - 45.minute %>
+  closed: <%= Time.now - 90.minute %>
+  closing: <%= Time.now - 1.hour %>
+  
