--- a/test/fixtures/warnings.yml
+++ b/test/fixtures/warnings.yml
@@ -1,13 +1,6 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  status: MyString
+open:
+  status: open
   suppressed: false
-  suppressed_by: MyString
-  minutes_open: 1
-
-two:
-  status: MyString
-  suppressed: false
-  suppressed_by: MyString
-  minutes_open: 1
+  suppressed_by_id:
+  minutes_open: 0
